[ADD]/Integrate UserService into the microservices architecture, including Docker configuration, project structure, and initial implementation of user management features.

--- a/EmailService/Templates/deactivate-account.html
+++ b/EmailService/Templates/deactivate-account.html
@@ -11,30 +11,10 @@
   <![endif]-->
     <title>Account Deactivated 😔</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700" rel="stylesheet" media="screen">
-    <style>
-.hover-underline:hover {
-  text-decoration: underline !important;
-}
-@media (max-width: 600px) {
-  .sm-w-full {
-    width: 100% !important;
-  }
-  .sm-px-24 {
-    padding-left: 24px !important;
-    padding-right: 24px !important;
-  }
-  .sm-py-32 {
-    padding-top: 32px !important;
-    padding-bottom: 32px !important;
-  }
-  .sm-leading-32 {
-    line-height: 32px !important;
-  }
-}
-</style>
+    <link rel="stylesheet" href="css/deactivate-account.css">
 </head>
 <body style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #eceff1;">
-    <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">Your account on Microservice System is deactivated.</div>
+    <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">Your account on iNFJZ is deactivated.</div>
   <div role="article" aria-roledescription="email" aria-label="Account Deactivated 😔" lang="en" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly;">
     <table style="width: 100%; font-family: Montserrat, -apple-system, 'Segoe UI', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
       <tr>
@@ -60,12 +40,12 @@
                         <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly;">Your account is deactivated due to one of the following reason:</p>
                         <ul style="margin-bottom: 24px;">
                           <li>You have deactivated your account yourself.</li>
-                          <li>Microservice System staff deactivated your account due to policy violation.</li>
+                          <li>iNFJZ System staff deactivated your account due to policy violation.</li>
                         </ul>
                         <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0;">
                           If you did not intend to deactivate your account or need our help keeping the account, please
                           contact us at
-                          <a href="mailto:support@microservicesystem.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">support@microservicesystem.com</a>
+                          <a href="mailto:support@infjz.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">support@infjz.com</a>
                         </p>
                         <table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
   <tr>
@@ -76,9 +56,9 @@
 </table>
 <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px;">
   Not sure why you received this email? Please
-  <a href="mailto:support@microservicesystem.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">let us know</a>.
+  <a href="mailto:support@infjz.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">let us know</a>.
 </p>
-<p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px;">Thanks, <br>The Microservice System Team</p>
+<p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px;">Thanks, <br>The iNFJZ Team</p>
                       </td>
                     </tr>
                     <tr>
