--- a/EmailService/Templates/change-password.html
+++ b/EmailService/Templates/change-password.html
@@ -8,16 +8,7 @@
   <meta name="format-detection" content="telephone=no, date=no, address=no, email=no">
   <title>Password Changed Successfully</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700" rel="stylesheet" media="screen">
-  <style>
-.hover-underline:hover {
-  text-decoration: underline !important;
-}
-@media (max-width: 600px) {
-  .sm-w-full { width: 100% !important; }
-  .sm-px-24 { padding-left: 24px !important; padding-right: 24px !important; }
-  .sm-py-32 { padding-top: 32px !important; padding-bottom: 32px !important; }
-}
-</style>
+  <link rel="stylesheet" href="css/change-password.css">
 </head>
 <body style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #eceff1;">
   <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">Your password has been changed successfully</div>
@@ -45,7 +36,7 @@
                       </p>
                       <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 24px;">
                         If you did not perform this action, please contact us immediately at
-                        <a href="mailto:support@microservicesystem.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">support@microservicesystem.com</a>.
+                        <a href="mailto:support@infjz.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">support@infjz.com</a>.
                       </p>
                       <table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
                         <tr>
@@ -56,9 +47,9 @@
                       </table>
                       <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px;">
                         Not sure why you received this email? Please
-                        <a href="mailto:support@microservicesystem.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">let us know</a>.
+                        <a href="mailto:support@infjz.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">let us know</a>.
                       </p>
-                      <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px;">Thanks, <br>The Microservice System Team</p>
+                      <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px;">Thanks, <br>The iNFJZ Team</p>
                     </td>
                   </tr>
                   <tr>
