--- a/EmailService/Templates/reset-password.html
+++ b/EmailService/Templates/reset-password.html
@@ -11,27 +11,10 @@
   <![endif]-->
     <title>Reset your Password</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700" rel="stylesheet" media="screen">
-    <style>
-.hover-underline:hover {
-  text-decoration: underline !important;
-}
-@media (max-width: 600px) {
-  .sm-w-full {
-    width: 100% !important;
-  }
-  .sm-px-24 {
-    padding-left: 24px !important;
-    padding-right: 24px !important;
-  }
-  .sm-py-32 {
-    padding-top: 32px !important;
-    padding-bottom: 32px !important;
-  }
-}
-</style>
+    <link rel="stylesheet" href="css/reset-password.css">
 </head>
 <body style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #eceff1;">
-    <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">A request to reset password was received from your Microservice System Account</div>
+    <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">A request to reset password was received from your iNFJZ System Account</div>
   <div role="article" aria-roledescription="email" aria-label="Reset your Password" lang="en" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly;">
     <table style="width: 100%; font-family: Montserrat, -apple-system, 'Segoe UI', sans-serif;" cellpadding="0" cellspacing="0" role="presentation">
       <tr>
@@ -53,7 +36,7 @@
                         <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin-top: 0; font-size: 24px; font-weight: 700; color: #ff5850;">{{Username}}!</p>
                         <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 24px;">
                           A request to reset password was received from your
-                          <span style="font-weight: 600;">Microservice System</span> Account -
+                          <span style="font-weight: 600;">iNFJZ System</span> Account -
                           <a href="mailto:{{Email}}" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">{{Email}}</a>
                           (ID: {{UserId}}) from the IP - <span style="font-weight: 600;">{{IpAddress}}</span> .
                         </p>
@@ -73,7 +56,7 @@
                         <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0;">
                           If you did not request a password reset, please
                           contact us at
-                          <a href="mailto:support@microservicesystem.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">support@microservicesystem.com</a>
+                          <a href="mailto:support@infjz.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">support@infjz.com</a>
                         </p>
                         <table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
   <tr>
@@ -84,9 +67,9 @@
 </table>
 <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px;">
   Not sure why you received this email? Please
-  <a href="mailto:support@microservicesystem.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">let us know</a>.
+  <a href="mailto:support@infjz.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">let us know</a>.
 </p>
-<p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px;">Thanks, <br>The Microservice System Team</p>
+<p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px;">Thanks, <br>The iNFJZ System Team</p>
                       </td>
                     </tr>
                     <tr>
