--- a/EmailService/Templates/verify-email.html
+++ b/EmailService/Templates/verify-email.html
@@ -11,27 +11,7 @@
   <![endif]-->
     <title>Verify Email Address</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700" rel="stylesheet" media="screen">
-    <style>
-.hover-underline:hover {
-  text-decoration: underline !important;
-}
-@media (max-width: 600px) {
-  .sm-w-full {
-    width: 100% !important;
-  }
-  .sm-px-24 {
-    padding-left: 24px !important;
-    padding-right: 24px !important;
-  }
-  .sm-py-32 {
-    padding-top: 32px !important;
-    padding-bottom: 32px !important;
-  }
-  .sm-leading-32 {
-    line-height: 32px !important;
-  }
-}
-</style>
+    <link rel="stylesheet" href="css/verify-email.css">
 </head>
 <body style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #eceff1;">
     <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">Please verify your email address</div>
@@ -58,12 +38,12 @@
                           Thanks for signing up! 👋
                         </p>
                         <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 24px;">
-                          Please verify your email address by clicking the below button and join our microservice community,
+                          Please verify your email address by clicking the below button and join our infjz community,
                           start exploring the resources or showcasing your work.
                         </p>
                         <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 24px;">
-                          If you did not sign up to Microservice System, please ignore this email or contact us at
-                          <a href="mailto:support@microservicesystem.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">support@microservicesystem.com</a>
+                          If you did not sign up to iNFJZ System, please ignore this email or contact us at
+                          <a href="mailto:support@infjz.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">support@infjz.com</a>
                         </p>
                         <!-- <a href="{{VerifyLink}}" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin-bottom: 24px; display: block; font-size: 16px; line-height: 100%; color: #7367f0; text-decoration: none;">{{VerifyLink}}</a> -->
                         <table cellpadding="0" cellspacing="0" role="presentation">
@@ -82,9 +62,9 @@
 </table>
 <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px;">
   Not sure why you received this email? Please
-  <a href="mailto:support@microservicesystem.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">let us know</a>.
+  <a href="mailto:support@infjz.com" class="hover-underline" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; color: #7367f0; text-decoration: none;">let us know</a>.
 </p>
-<p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px;">Thanks, <br>The Microservice System Team</p>
+<p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px;">Thanks, <br>The iNFJZ System Team</p>
                       </td>
                     </tr>
                     <tr>
