--- a/EmailService/Templates/register-google.html
+++ b/EmailService/Templates/register-google.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <title>Welcome to iNFJZ System</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700" rel="stylesheet" media="screen">
-  <link rel="stylesheet" href="css/register-google.css">
 </head>
 <body style="margin: 0; width: 100%; padding: 0; word-break: break-word; -webkit-font-smoothing: antialiased; background-color: #eceff1;">
   <div style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; display: none;">Welcome to iNFJZ System - Google Login</div>
@@ -37,7 +36,7 @@
                         <strong>Important:</strong> To enhance your account security, we recommend setting up a password for your account. This will allow you to log in directly to our system without using Google authentication.
                       </p>
                       <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 32px; text-align: center;">
-                        <a href="{{ResetLink}}" class="btn-primary" style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly;">
+                        <a href="{{ResetLink}}" style="background-color: #7367f0; border-color: #7367f0; color: #ffffff; padding: 12px 24px; text-decoration: none; border-radius: 6px; display: inline-block; font-weight: 600; font-size: 16px;">
                           Set Up Your Password
                         </a>
                       </p>
