[UPDATE]/Add multi-language support across services by introducing language parameters in various DTOs, enhancing email notifications, and refining frontend assets for improved user experience.

--- a/EmailService/Templates/verify-email.vi.html
+++ b/EmailService/Templates/verify-email.vi.html
@@ -21,7 +21,8 @@
               <table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
                 <tr>
                   <td class="sm-px-24" style="mso-line-height-rule: exactly; border-radius: 4px; background-color: #ffffff; padding: 48px; text-align: left; font-family: Montserrat, -apple-system, 'Segoe UI', sans-serif; font-size: 16px; line-height: 24px; color: #626262;">
-                    <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin-bottom: 0; font-size: 20px; font-weight: 600;">Xin chào {{Username}},</p>
+                    <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin-bottom: 0; font-size: 20px; font-weight: 600;">Xin chào</p>
+                    <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin-top: 0; font-size: 24px; font-weight: 700; color: #ff5850;">{{Username}}!</p>
                     <p style="font-family: 'Montserrat', sans-serif; mso-line-height-rule: exactly; margin: 0; margin-bottom: 16px; font-size: 24px; font-weight: 600; color: #263238;">
                       Chào mừng đến với EDISA! 🎉
                     </p>
