[UPDATE]/Refactor frontend styles toast notifications, enhancing layout styles

--- a/Frontend/assets/css/demo.css
+++ b/Frontend/assets/css/demo.css
@@ -35,7 +35,9 @@
 .layout-navbar-fixed .layout-wrapper:not(.layout-without-menu) .layout-page {
   padding-top: 64px !important;
 }
-.layout-navbar-fixed .layout-wrapper:not(.layout-horizontal):not(.layout-without-menu) .layout-page {
+.layout-navbar-fixed
+  .layout-wrapper:not(.layout-horizontal):not(.layout-without-menu)
+  .layout-page {
   padding-top: 78px !important;
 }
 /* Navbar page z-index issue solution */
@@ -86,7 +88,7 @@
   direction: ltr !important;
 }
 
-[dir='rtl'] .rtl-only {
+[dir="rtl"] .rtl-only {
   display: block !important;
 }
 
